# naver_real_estate_crawler

./: .gitignore
backend/: .env.example  Caddyfile  DEPLOYMENT_DECISION_KR.md  Dockerfile  ONE_SCRIPT_ONOFF_GUIDE_KR.md  README.md  TECHNICAL_ARCHITECTURE_KR.md  WEB_TEST_GUIDE_KR.md  WEB_UI_FEATURE_GUIDE_KR.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.production.example  pyproject.toml  service.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260210_0001_initial_schema.py  20260211_0002_access_token_revocations.py  20260211_0003_listing_article_no_bigint.py  20260213_0004_billing_foundation.py  20260214_0005_email_verification_and_scheduler_config.py  20260214_0006_user_trade_preferences.py
backend/app/: db.py  main.py  models.py  settings.py  worker.py
backend/app/crawler/: naver_client.py
backend/app/services/: alerts.py  analytics.py  auth.py  billing.py  ingest.py  notifier.py  parsers.py  scheduler.py
backend/app/web/: app.js  index.html
backend/e2e/: package-lock.json  package.json  playwright.config.ts
backend/e2e/tests/: auth-session.spec.ts  billing-premium.spec.ts  ingest-status.spec.ts
backend/tests/: test_analytics_trade_types.py  test_auth.py  test_billing.py  test_crawler_api.py  test_ingest_utils.py  test_models.py  test_naver_client.py  test_notifier.py  test_scheduler_briefing.py  test_worker.py
